# datablast

./: Cargo.toml  LICENSE  README.md  SPECIFICATION.md
simple/: README.md  decode.py  encode.py
src/: main.rs  qr_reader.rs  qr_writer.rs  sequence.rs  symbol.rs  video.rs
