[package]
name = "datablast"
version = "0.1.0"
authors = ["Danya Generalov <danya@danya02.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rqrr = "0.2.0"
image = "0.23.7"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12.3"
