[package]
name = "datablast"
version = "0.1.0"
authors = ["Danya Generalov <danya@danya02.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rqrr = "0.2.1"
image = "0.21.3"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12.3"
log = "0.4.11"
simple_logger = "1.6.0"
qrcode = { version = "0.11", default-features = true }
hex = "0.4.2"
sha3 = "0.9.1"
